# port-forwarder

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: style.css
src/components/: Input.vue  PortForwardForm.vue  PortForwardList.vue  StatusTag.vue
src/components/icons/: ReturnIcon.vue
src/services/: port-forward.ts
src/stores/: port-forwards.ts
src/types/: port-forward.ts
src/utils/: commands.ts
